<resources>
    <string name="app_name">Coin Karaoke</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="reservation">RESERVATION</string>
    <string name="do_you_wish_to_continue">DO YOU WISH TO CONTINUE?</string>
    <string name="yes_i_do">YES, I DO</string>
    <string name="no_i_don_t">NO, I DON\'T</string>
    <string name="occupied">OCCUPIED</string>
    <string name="empty_room">EMPTY ROOM</string>
    <string name="karaoke">karaoke</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="wanna_sign_up">Wanna sign up?</string>
    <string name="wanna_sign_in">Wanna sign in?</string>
    <string name="do_you_want_to_make_reservation">Do you want to make reservation?</string>
    <string name="rooms_status">Rooms Status</string>
    <string name="empty">Empty</string>
    <string name="occupied_lower">Occupied</string>
    <string name="touch_to_make_reservation">Touch to make reservation</string>
    <string name="reservation_list">Reservation List</string>
    <string name="want_to_make_a_reservation">Want to make a reservation?</string>
    <string name="current_rooms">Current Rooms</string>
    <string name="reserve">RESERVE</string>
    <string name="do_return">RETURN</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="enter">Enter</string>
    <string name="refresh_room_status">Refresh room status</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="no_reservation">No Reservation</string>
    <string name="check">Check</string>
    <string name="your_coin">Your Coin</string>
    <string name="charge_now">Charge now</string>
    <string name="send_to_friends">Send to Friends</string>
    <string name="charge_with_paypal">Charge with Paypal</string>
    <string name="charge_with_visa_card">Charge with VISA Card</string>
    <string name="charge_with_amazon">Charge with Amazon</string>
    <string name="pay_with">Pay with</string>
    <string name="send">Send</string>
    <string name="phone">Phone</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="ranking">Ranking</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="remove_from_favorite_list">remove from favorite list</string>
    <string name="amount">Amount</string>
    <string name="check_now">Check Now</string>
    <string name="please_enter_your_phone_number">Please enter your phone number.</string>
    <string name="check_your_reservation">Check your reservation</string>
    <string name="talk_with_chat_bot">Talk with chat bot</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="i_have_a_question">I have a question</string>
    <string name="hot">Hot</string>
    <string name="new2">New</string>
    <string name="best_of_the_week">Best of The Week</string>
    <string name="write_new_post">Write new post</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="youtube_video_url">Youtube Video URL</string>
    <string name="i_like_it">I LIKE IT</string>
    <string name="touch_to_make_a_reservation">Touch to make a reservation</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="scan">Scan</string>
    <string name="scan_qr_code_to_charge_coin">Scan QR code to charge coin.</string>
    <string name="set_begin_time">Set begin time</string>
    <string name="set_end_time">Set end time</string>
    <string name="no_best_post_yet">No best post yet</string>
    <string name="substring">Ver 1.0</string>
    <string name="sign_out">Sign out</string>
</resources>