<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/app_name"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/id"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/app_name"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- Ask Continue Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/wanna_sign_in"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_reserve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/yes_i_do"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_i_don_t"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
