<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".ViewPostActivity">

    <EditText
        android:id="@+id/edit_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/app_name"
        android:drawableStart="@drawable/ic_title"
        android:drawablePadding="8dp"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="#CCC" />

    <EditText
        android:id="@+id/edit_post_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/app_name"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/id"
        android:inputType="text"
        android:textColor="#CCC" />

    <fragment
        android:id="@+id/youtube_player"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_post_message"
        android:layout_width="match_parent"
        android:maxLines="4"
        android:padding="8dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_i_like_it"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/i_like_it"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_thumb_up"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txt_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/do_return"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>