<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    android:orientation="vertical"
    tools:context=".IntroFragment">

    <!-- Upper Half of UI -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:background="#333"
        android:columnCount="2"
        android:padding="10dp">

        <!-- Occupied Room Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_red_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/occupied"
                android:textColor="#333"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_occupied"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="10"
                android:textColor="#333"
                android:textSize="72sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <!-- Empty Room Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty_room"
                android:textColor="#333"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_empty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="8"
                android:textColor="#333"
                android:textSize="72sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <!-- Sign Up -->
        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:background="#555"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Sign In -->
        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="#555"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textSize="26sp"
            android:textStyle="bold" />

    </GridLayout>
    <!-- End of Upper half of UI -->

    <!-- Bottom Half of UI -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <!-- Reservation -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:background="@color/black"
            android:padding="8dp">

            <TextView
                android:id="@+id/txt_reservation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/reservation"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibtn_check_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/check_your_reservation"
                android:background="@drawable/ic_check" />

        </RelativeLayout>

        <!-- Reservation Number -->
        <TextView
            android:id="@+id/txt_reservation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_reservation"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <!-- Ask Continue Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/do_you_wish_to_continue"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/yes_i_do"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/no_i_don_t"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <!-- End of Bottom Half of UI -->

</LinearLayout>